# validus

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  Validus.c  Validus.h  ValidusLibrary.c  ValidusLibrary.h  autoformat.sh  configure.sh  main.c  mkdocs.yml  style.css  validus.c  validus.code-workspace  validus.h  validuscli.c  validuscli.h  validuslibrary.c  validuslibrary.h  validusutil.c  validusutil.h  version.h.in
docs/: CNAME  annotated.html  annotated_dup.js  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_98b0b4f2b7ada084522cf3f9258d0075.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__core.html  group__core.js  group__corefuncs.html  group__corefuncs.js  group__coremacros.html  group__coremacros.js  group__util.html  group__util.js  index.html  index.js  index.md  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  structvalidus__state.html  structvalidus__state.js  structvalidus__timer.html  structvalidus__timer.js  validus_8c.html  validus_8c.js  validus_8h.html  validus_8h.js  validus_8h_source.html  (+8 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  functions_1.js  groups_0.js  groups_1.js  groups_2.js  groups_4.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js
docs/sources/: header.html
